--- a/Software/platformio.ini
+++ b/Software/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = emulator_64bits
+default_envs = esp32dev
 
 ; Shared options
 [env]
@@ -26,50 +26,50 @@ lib_deps =
 lib_archive = false
 
 [env:esp32dev]
-platform = espressif32
+platform = https://github.com/platformio/platform-espressif32.git
 board = esp32dev
 framework = espidf
 
-[env:emulator_64bits]
-platform = native@^1.1.3
-extra_scripts = 
-  pre:support/sdl2_paths.py ; Tries to find SDL2 include and lib paths on your system - specifically for MacOS w/ Homebrew
-  post:support/sdl2_build_extra.py
-build_flags =
-  ${env.build_flags}
-  ; -D LV_LOG_LEVEL=LV_LOG_LEVEL_INFO
-  -D LV_LOG_PRINTF=1
-  ; Add recursive dirs for hal headers search
-  !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
-  -lSDL2
-  ; SDL drivers options
-  -D LV_LVGL_H_INCLUDE_SIMPLE
-  -D LV_DRV_NO_CONF
-  -D LV_USE_SDL
-  -D SDL_HOR_RES=480
-  -D SDL_VER_RES=320  
-  -D SDL_ZOOM=1
-  -D LV_SDL_INCLUDE_PATH="\"SDL2/SDL.h\""
+; [env:emulator_64bits]
+; platform = native@^1.1.3
+; extra_scripts = 
+;   pre:support/sdl2_paths.py ; Tries to find SDL2 include and lib paths on your system - specifically for MacOS w/ Homebrew
+;   post:support/sdl2_build_extra.py
+; build_flags =
+;   ${env.build_flags}
+;   ; -D LV_LOG_LEVEL=LV_LOG_LEVEL_INFO
+;   -D LV_LOG_PRINTF=1
+;   ; Add recursive dirs for hal headers search
+;   !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
+;   -lSDL2
+;   ; SDL drivers options
+;   -D LV_LVGL_H_INCLUDE_SIMPLE
+;   -D LV_DRV_NO_CONF
+;   -D LV_USE_SDL
+;   -D SDL_HOR_RES=480
+;   -D SDL_VER_RES=320  
+;   -D SDL_ZOOM=1
+;   -D LV_SDL_INCLUDE_PATH="\"SDL2/SDL.h\""
 
-  ; LVGL memory options, setup for the demo to run properly
-  -D LV_MEM_CUSTOM=1
-  -D LV_MEM_SIZE="(128U * 1024U)"
+;   ; LVGL memory options, setup for the demo to run properly
+;   -D LV_MEM_CUSTOM=1
+;   -D LV_MEM_SIZE="(128U * 1024U)"
   
-lib_deps =
-  ${env.lib_deps}
-build_src_filter =
-  +<*>
-  +<../hal/sdl2>
-  ; Force compile LVGL demo, remove when working on your own project
-  +<../.pio/libdeps/emulator_64bits/lvgl/demos>
+; lib_deps =
+;   ${env.lib_deps}
+; build_src_filter =
+;   +<*>
+;   +<../hal/sdl2>
+;   ; Force compile LVGL demo, remove when working on your own project
+;   +<../.pio/libdeps/emulator_64bits/lvgl/demos>
 
 
-[env:emulator_32bits]
-extends = env:emulator_64bits
-build_flags =
-  ${env:emulator_64bits.build_flags}
-  -m32
-build_src_filter =
-  +<*>
-  +<../hal/sdl2>
-  +<../.pio/libdeps/emulator_32bits/lvgl/demos>
+; [env:emulator_32bits]
+; extends = env:emulator_64bits
+; build_flags =
+;   ${env:emulator_64bits.build_flags}
+;   -m32
+; build_src_filter =
+;   +<*>
+;   +<../hal/sdl2>
+;   +<../.pio/libdeps/emulator_32bits/lvgl/demos>
